deploy: 2e84fb1857e339412386388145c04fb89cd66073

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -135,7 +135,12 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume"><a href="">20th International Symposium on Automated Technology for Verification and Analysis</a></span>
+          <span class="article-volume"><a href="">32nd European Symposium on Programming</a></span>
+          (ESOP ’23).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://atva-conference.org/2022/">20th International Symposium on Automated Technology for Verification and Analysis</a></span>
           (ATVA ’22).
         </div>
         <div class="item">
