--- a/cv.html
+++ b/cv.html
@@ -135,7 +135,12 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
-          <span class="article-volume">20th International Symposium on Automated Technology for Verification and Analysis</span>
+          <span class="article-volume">32nd European Symposium on Programming</span>
+          (<nobr>ESOP ’23</nobr>).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://atva-conference.org/2022/">20th International Symposium on Automated Technology for Verification and Analysis</a></span>
           (<nobr>ATVA ’22</nobr>).
         </div>
         <div class="item">
