--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://www.ieee-security.org/TC/CSF2023/">36th IEEE Computer Security Foundations Symposium</a></span>
+          (CSF ’23).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="">32nd European Symposium on Programming</a></span>
           (ESOP ’23).
         </div>
