deploy: 39170830eb3bec3fa93233a2d26963d31fba3931

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1 class="title">Michael Emmi</h1>
           <div class="tagline">Applied Scientist  / Amazon Web Services </div>
           <div class="item">
-              <span class="tag"><a href="http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael">@dblp</a></span>
+              <span class="tag"><a href="https://dblp.org/pid/76/5819.html">@dblp</a></span>
               <span class="tag"><a href="https://scholar.google.com/citations?user=fOxqIXYAAAAJ">@Google Scholar</a></span>
               <span class="tag"><a href="https://github.com/michael-emmi">@GitHub</a></span>
               <span class="tag"><a href="cv.html">@CV</a></span>
