deploy: 5cf95c1e9ebc005ffffee8270f8cf1bba00d531a

--- a/cv.html
+++ b/cv.html
@@ -144,6 +144,11 @@
           (<nobr>ESOP ’23</nobr>).
         </div>
         <div class="item">
+          <span class="article-title">Program Chair</span>.
+          <span class="article-volume"><a href="https://smackers.github.io/democratizing-software-verification-workshop-2022/">Workshop on Democratizing Software Verification</a></span>
+          (<nobr>DSV ’22</nobr>).
+        </div>
+        <div class="item">
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://atva-conference.org/2022/">20th International Symposium on Automated Technology for Verification and Analysis</a></span>
           (<nobr>ATVA ’22</nobr>).
