--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -144,6 +144,11 @@
           (ESOP ’23).
         </div>
         <div class="item">
+          <span class="article-title">Program Chair</span>.
+          <span class="article-volume"><a href="https://smackers.github.io/democratizing-software-verification-workshop-2022/">Workshop on Democratizing Software Verification</a></span>
+          (DSV ’22).
+        </div>
+        <div class="item">
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://atva-conference.org/2022/">20th International Symposium on Automated Technology for Verification and Analysis</a></span>
           (ATVA ’22).
