deploy: 3b731c50484aa774783dee8e9bd19db0b742e670

--- a/cv.html
+++ b/cv.html
@@ -390,12 +390,12 @@
         <div class="item">
           Michael Emmi, Liana Hadarean, Ranjit Jhala, Lee Pike, Nico Rosner, Martin Schäf, Aritra Sengupta, Willem Visser.
           <span class="article-title">
-              RAPID: Checking API Usage for the Cloud in the Cloud.
+              <a href="https://doi.org/10.1145/3468264.3473934">RAPID: Checking API Usage for the Cloud in the Cloud</a>.
           </span>
             In <span class="article-volume">29th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering</span>
             (<nobr>ESEC/FSE ’21</nobr>).
             ACM, 2021.
-          
+          <span class="screen-only">(<a href="https://github.com/michael-emmi/research-papers/raw/master/conf-sigsoft-EmmiHJPRSSV21.pdf">PDF</a>)</span>
         </div>
         <div class="item">
           Sidi Mohamed Beillahi, Gabriela Ciocarlie, Michael Emmi, Constantin Enea.
