deploy: 6f2be3fb5ad0c01340b7a3cf612478419d421706

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -139,6 +139,11 @@
           (CAV ’23).
         </div>
         <div class="item">
+          <span class="article-title">Program Chair</span>.
+          <span class="article-volume"><a href="https://popl23.sigplan.org/home/VMCAI-2023">24th International Conference on Verification, Model Checking, and Abstract Interpretation</a></span>
+          (VMCAI ’23).
+        </div>
+        <div class="item">
           <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://www.ieee-security.org/TC/CSF2023/">36th IEEE Computer Security Foundations Symposium</a></span>
           (CSF ’23).
