--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
             </div>
             <div class="item">
               <div class="head">
+                <span class="lhs">Program Chair</span>
+                <span class="rhs">
+                  <a href="https://popl23.sigplan.org/home/VMCAI-2023">
+                  <nobr>VMCAI ’23</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
                   <a href="https://www.ieee-security.org/TC/CSF2023/">
