deploy: d41177f6dafae28e1cfff5f3f9bdf8430f9219f1

--- a/cv.html
+++ b/cv.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://conf.researchr.org/home/sas-2023">30th Static Analysis Symposium</a></span>
+          (<nobr>SAS ’23</nobr>).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="http://i-cav.org/2023/">35th International Conference on Computer Aided Verification</a></span>
           (<nobr>CAV ’23</nobr>).
         </div>
