--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
+                  <a href="https://conf.researchr.org/home/sas-2023">
+                  <nobr>SAS ’23</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
+                <span class="rhs">
                   <a href="http://i-cav.org/2023/">
                   <nobr>CAV ’23</nobr>
                   </a>
