--- a/cv.html
+++ b/cv.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://popl24.sigplan.org/home/VMCAI-2024">25th International Conference on Verification, Model Checking, and Abstract Interpretation</a></span>
+          (<nobr>VMCAI ’24</nobr>).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://conf.researchr.org/home/sas-2023">30th Static Analysis Symposium</a></span>
           (<nobr>SAS ’23</nobr>).
         </div>
