--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -140,6 +140,11 @@
         </div>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://csf2024.ieee-security.org">37th IEEE Computer Security Foundations Symposium</a></span>
+          (CSF ’24).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://conf.researchr.org/home/sas-2023">30th Static Analysis Symposium</a></span>
           (SAS ’23).
         </div>
