--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
+                  <a href="https://csf2024.ieee-security.org">
+                  <nobr>CSF ’24</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
+                <span class="rhs">
                   <a href="https://conf.researchr.org/home/sas-2023">
                   <nobr>SAS ’23</nobr>
                   </a>
