deploy: 48a621429aaf382dfbdef66cae34ddddd2b34388

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
+                  <a href="https://pldi24.sigplan.org">
+                  <nobr>PLDI ’24</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
+                <span class="rhs">
                   <a href="https://popl24.sigplan.org/home/VMCAI-2024">
                   <nobr>VMCAI ’24</nobr>
                   </a>
