--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://pldi24.sigplan.org">45th ACM SIGPLAN Conference on Programming Language Design and Implementation</a></span>
+          (PLDI ’24).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://popl24.sigplan.org/home/VMCAI-2024">25th International Conference on Verification, Model Checking, and Abstract Interpretation</a></span>
           (VMCAI ’24).
         </div>
