deploy: 4ee8f28f3eb28297d6074e7b07886e703fc24ac6

--- a/index.html
+++ b/index.html
@@ -594,6 +594,14 @@
             <div class="item">
               <div class="head">
                 <span class="lhs">
+                    <a>Compositional Taint Analysis for Enforcing Security Policies at Scale</a>
+                </span>
+                <span class="rhs"><nobr>ESEC/FSE ’23</nobr></span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">
                     <a href="https://github.com/michael-emmi/research-papers/raw/master/conf-sigsoft-EmmiHJPRSSV21.pdf">RAPID: Checking API Usage for the Cloud in the Cloud</a>
                 </span>
                 <span class="rhs"><nobr>ESEC/FSE ’21</nobr></span>
