--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,16 @@
       <h2>In International Conference Proceedings</h2>
       <ol>
           <li class="item">
+            Subarno Banerjee, Siwei Cui, Michael Emmi, Antonio Filieri, Liana Hadarean, Peixuan Li, Linghui Luo, Goran Piskachev, Nicolás Rosner, Aritra Sengupta, Omer Tripp, Jingbo Wang.
+            <span class="article-title">
+                <a href="https://doi.org/10.1145/3611643.3613889">Compositional Taint Analysis for Enforcing Security Policies at Scale</a>.
+            </span>
+            In <span class="article-volume">31st ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering</span>
+            (<nobr>ESEC/FSE ’23</nobr>).
+            ACM, 2023.
+            
+          </li>
+          <li class="item">
             Michael Emmi, Liana Hadarean, Ranjit Jhala, Lee Pike, Nico Rosner, Martin Schäf, Aritra Sengupta, Willem Visser.
             <span class="article-title">
                 <a href="https://doi.org/10.1145/3468264.3473934">RAPID: Checking API Usage for the Cloud in the Cloud</a>.
