deploy: dc8e268ab4c19c60e9600014b96f863e44836119

--- a/cv.html
+++ b/cv.html
@@ -879,6 +879,7 @@
           <span><strong>José Bacelar Almeida</strong> (Universidade do Minho)</span>
           <span><strong>Konstantinos Athanasiou</strong> (Northeastern University)</span>
           <span><strong>Mohamed Faouzi Atig</strong> (Uppsala University)</span>
+          <span><strong>Subarno Banerjee</strong> (Amazon Web Services)</span>
           <span><strong>Manuel Barbosa</strong> (University of Porto)</span>
           <span><strong>Gilles Barthe</strong> (IMDEA Software)</span>
           <span><strong>Sidi Mohamed Beillahi</strong> (Université de Paris)</span>
@@ -890,12 +891,15 @@
           <span><strong>Derrick Coetzee</strong> (MSR)</span>
           <span><strong>Jeremy Condit</strong> (MSR)</span>
           <span><strong>Byron Cook</strong> (Amazon Web Services)</span>
+          <span><strong>Siwei Cui</strong> (Texas A&M University)</span>
           <span><strong>François Dupressoir</strong> (IMDEA Software)</span>
           <span><strong>Constantin Enea</strong> (Paris 7)</span>
           <span><strong>Petros Faloutsos</strong> (UCLA)</span>
+          <span><strong>Antonio Filieri</strong> (Amazon Web Services)</span>
           <span><strong>Jeffrey S. Fischer</strong> (UCLA)</span>
           <span><strong>Pierre Ganty</strong> (IMDEA Software)</span>
           <span><strong>Dimitra Giannakopoulou</strong> (NASA Ames)</span>
+          <span><strong>Liana Hadarean</strong> (Amazon Web Services)</span>
           <span><strong>Jad Hamza</strong> (Paris 7)</span>
           <span><strong>Arvind Haran</strong> (University of Utah)</span>
           <span><strong>Chris Hawblitzel</strong> (MSR)</span>
@@ -905,6 +909,8 @@
           <span><strong>Eddie Kohler</strong> (Harvard)</span>
           <span><strong>Siddharth Krishna</strong> (New York University)</span>
           <span><strong>Akash Lal</strong> (MSR)</span>
+          <span><strong>Peixuan Li</strong> (Amazon Web Services)</span>
+          <span><strong>Linghui Luo</strong> (Amazon Web Services)</span>
           <span><strong>Rupak Majumdar</strong> (MPI-SWS)</span>
           <span><strong>Roman Manevich</strong> (UCLA)</span>
           <span><strong>Colm MacCarthaigh</strong> (Amazon Web Services)</span>
@@ -913,14 +919,22 @@
           <span><strong>Gennaro Parlato</strong> (Paris 7)</span>
           <span><strong>Corina S. Pasareanu</strong> (NASA Ames)</span>
           <span><strong>Frances Perry</strong> (Princeton University)</span>
+          <span><strong>Lee Pike</strong> (Amazon Web Services)</span>
+          <span><strong>Goran Piskachev</strong> (Amazon Web Services)</span>
           <span><strong>Polyvios Pratikaki</strong> (University of Maryland)</span>
           <span><strong>Shaz Qadeer</strong> (MSR)</span>
           <span><strong>Zvonimir Rakamaric</strong> (University of Utah)</span>
           <span><strong>Fernando Rosa-Velardo</strong> (Universidad Complutense de Madrid)</span>
+          <span><strong>Nicolás Rosner</strong> (Amazon Web Services)</span>
+          <span><strong>Martin Schäf</strong> (Amazon Web Services)</span>
           <span><strong>Daniel Schwartz-Narbonne</strong> (Amazon Web Services)</span>
           <span><strong>Koushik Sen</strong> (University of California, Berkeley)</span>
+          <span><strong>Aritra Sengupta</strong> (Amazon Web Services)</span>
           <span><strong>Serdar Tasiran</strong> (Koç University)</span>
+          <span><strong>Omer Tripp</strong> (Amazon Web Services)</span>
+          <span><strong>Willem Visser</strong> (Amazon Web Services)</span>
           <span><strong>Alice Wang</strong> (UCLA)</span>
+          <span><strong>Jingbo Wang</strong> (USC)</span>
           <span><strong>Jonathan Whitaker</strong> (University of Utah)</span>
         </p>
       </div>
