deploy: e93c30ccd0ab6504942505a4f4866d3db2ed14d3

--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://popl24.sigplan.org">52nd ACM SIGPLAN Symposium on Principles of Programming Languages</a></span>
+          (POPL ’25).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://pldi24.sigplan.org">45th ACM SIGPLAN Conference on Programming Language Design and Implementation</a></span>
           (PLDI ’24).
         </div>
