--- a/cv.html
+++ b/cv.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://popl24.sigplan.org">52nd ACM SIGPLAN Symposium on Principles of Programming Languages</a></span>
+          (<nobr>POPL ’25</nobr>).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://pldi24.sigplan.org">45th ACM SIGPLAN Conference on Programming Language Design and Implementation</a></span>
           (<nobr>PLDI ’24</nobr>).
         </div>
