--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://csf2025.ieee-security.org">38th IEEE Computer Security Foundations Symposium</a></span>
+          (CSF ’25).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://popl25.sigplan.org">52nd ACM SIGPLAN Symposium on Principles of Programming Languages</a></span>
           (POPL ’25).
         </div>
