--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
               <div class="head">
                 <span class="lhs">Program Committee</span>
                 <span class="rhs">
+                  <a href="https://csf2025.ieee-security.org">
+                  <nobr>CSF ’25</nobr>
+                  </a>
+                </span>
+              </div>
+            </div>
+            <div class="item">
+              <div class="head">
+                <span class="lhs">Program Committee</span>
+                <span class="rhs">
                   <a href="https://popl25.sigplan.org">
                   <nobr>POPL ’25</nobr>
                   </a>
