deploy: cf7fe63b3f85b40cc60e088d3b6654b8e45ed54b

--- a/cv.html
+++ b/cv.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://conferences.i-cav.org/2025/">37th International Conference on Computer Aided Verification</a></span>
+          (<nobr>CAV ’25</nobr>).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://csf2025.ieee-security.org">38th IEEE Computer Security Foundations Symposium</a></span>
           (<nobr>CSF ’25</nobr>).
         </div>
