--- a/cv-no-publications.html
+++ b/cv-no-publications.html
@@ -135,6 +135,11 @@
       <h2>Activities</h2>
         <div class="item">
           <span class="article-title">Program Committee</span>.
+          <span class="article-volume"><a href="https://conferences.i-cav.org/2025/">37th International Conference on Computer Aided Verification</a></span>
+          (CAV ’25).
+        </div>
+        <div class="item">
+          <span class="article-title">Program Committee</span>.
           <span class="article-volume"><a href="https://csf2025.ieee-security.org">38th IEEE Computer Security Foundations Symposium</a></span>
           (CSF ’25).
         </div>
